force-app/main/default/objects/malive__MALiveAction__c/malive__MALiveAction__c.object-meta.xml
<CustomObject>
    <label>MA Live Action</label>
    <nameField>
        <displayFormat>Action-{0000}</displayFormat>
        <label>MA Live Action Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MA Live Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>