force-app/main/default/objects/malive__MALiveAction__c/fields/malive__EntryPosition__c.field-meta.xml
<CustomField>
    <fullName>malive__EntryPosition__c</fullName>
    <description>Location of Entry Position</description>
    <inlineHelpText>Location of Entry Position</inlineHelpText>
    <label>Entry Position</label>
    <scale>7</scale>
    <type>Location</type>
</CustomField>