force-app/main/default/objects/malive__MALiveAction__c/fields/malive__ExitDateTime__c.field-meta.xml
<CustomField>
    <fullName>malive__ExitDateTime__c</fullName>
    <description>Date &amp; Time of Exit</description>
    <inlineHelpText>Date &amp; Time of Exit</inlineHelpText>
    <label>Exit Date Time</label>
    <type>DateTime</type>
</CustomField>