force-app/main/default/objects/malive__MALiveAction__c/fields/malive__ExitPosition__c.field-meta.xml
<CustomField>
    <fullName>malive__ExitPosition__c</fullName>
    <description>Location of Exit Position</description>
    <inlineHelpText>Location of Exit Position</inlineHelpText>
    <label>Exit Position</label>
    <scale>7</scale>
    <type>Location</type>
</CustomField>