force-app/main/default/objects/malive__MALiveAction__c/fields/malive__MALiveActionType__c.field-meta.xml
<CustomField>
    <fullName>malive__MALiveActionType__c</fullName>
    <description>Record Type of Action Created</description>
    <inlineHelpText>Record Type of Action Created</inlineHelpText>
    <label>MA Live Action Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Enters</fullName>
            </value>
            <value>
                <fullName>Exits</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>