force-app/main/default/objects/malive__MALiveAction__c/fields/malive__MALiveDeviceId__c.field-meta.xml
<CustomField>
    <fullName>malive__MALiveDeviceId__c</fullName>
    <description>Device Involved with Action &amp; Rule</description>
    <inlineHelpText>Device Involved with Action &amp; Rule</inlineHelpText>
    <label>MA Live Device Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>