force-app/main/default/objects/malive__MALiveAction__c/fields/malive__MALiveIoTDevice__c.field-meta.xml
<CustomField>
    <fullName>malive__MALiveIoTDevice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to IoT Device that Created Action</description>
    <inlineHelpText>Lookup to IoT Device that Created Action</inlineHelpText>
    <label>MA Live IoT Device</label>
    <referenceTo>malive__IoTDevice__c</referenceTo>
    <relationshipLabel>MA Live Actions</relationshipLabel>
    <relationshipName>MALiveActions</relationshipName>
    <type>Lookup</type>
</CustomField>