force-app/main/default/objects/malive__MALiveAction__c/fields/malive__RuleId__c.field-meta.xml
<CustomField>
    <fullName>malive__RuleId__c</fullName>
    <description>External Rule Id</description>
    <inlineHelpText>External Rule Id</inlineHelpText>
    <label>Rule Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>