force-app/main/default/objects/malive__MALiveAction__c/fields/malive__RuleName__c.field-meta.xml
<CustomField>
    <fullName>malive__RuleName__c</fullName>
    <description>The name or label for this rule</description>
    <inlineHelpText>The name or label for this rule</inlineHelpText>
    <label>Rule Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>