force-app/main/default/objects/malive__MALiveAction__c/fields/malive__TimeSpentinGeofenceHours__c.field-meta.xml
<CustomField>
    <fullName>malive__TimeSpentinGeofenceHours__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Amount of time spent within a Geofence in Hours</description>
    <inlineHelpText>Amount of time spent within a Geofence in Hours</inlineHelpText>
    <label>Time Spent in Geofence (Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>